// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TagsController (e2e) /tags/:id/details (GET) returns requested tag 1`] = `
Object {
  "category": "characters",
  "id": 621918,
  "name": "voluptatem",
  "tagged": 40147,
  "uri": "https://emiliano.com",
}
`;

exports[`TagsController (e2e) /tags/list/:category (GET) converts parameters types 1`] = `
Object {
  "data": Array [
    Object {
      "category": "artists",
      "id": 128124,
      "name": "esse",
      "tagged": 99718,
      "uri": "https://torey.com",
    },
    Object {
      "category": "artists",
      "id": 691876,
      "name": "tempore",
      "tagged": 95788,
      "uri": "http://kaci.biz",
    },
    Object {
      "category": "artists",
      "id": 39054,
      "name": "et",
      "tagged": 89460,
      "uri": "https://arvel.net",
    },
    Object {
      "category": "artists",
      "id": 878116,
      "name": "ipsam",
      "tagged": 68521,
      "uri": "https://connor.info",
    },
    Object {
      "category": "artists",
      "id": 186260,
      "name": "repellat",
      "tagged": 14675,
      "uri": "http://audrey.info",
    },
  ],
  "pagination": Object {
    "page": 1,
    "total": 21,
  },
}
`;

exports[`TagsController (e2e) /tags/list/:category (GET) converts parameters types 2`] = `
Object {
  "data": Array [
    Object {
      "category": "artists",
      "id": 128124,
      "name": "esse",
      "tagged": 99718,
      "uri": "https://torey.com",
    },
    Object {
      "category": "artists",
      "id": 691876,
      "name": "tempore",
      "tagged": 95788,
      "uri": "http://kaci.biz",
    },
    Object {
      "category": "artists",
      "id": 39054,
      "name": "et",
      "tagged": 89460,
      "uri": "https://arvel.net",
    },
    Object {
      "category": "artists",
      "id": 878116,
      "name": "ipsam",
      "tagged": 68521,
      "uri": "https://connor.info",
    },
    Object {
      "category": "artists",
      "id": 186260,
      "name": "repellat",
      "tagged": 14675,
      "uri": "http://audrey.info",
    },
  ],
  "pagination": Object {
    "page": 1,
    "total": 21,
  },
}
`;

exports[`TagsController (e2e) /tags/list/:category (GET) converts parameters types 3`] = `
Object {
  "data": Array [
    Object {
      "category": "artists",
      "id": 128124,
      "name": "esse",
      "tagged": 99718,
      "uri": "https://torey.com",
    },
    Object {
      "category": "artists",
      "id": 691876,
      "name": "tempore",
      "tagged": 95788,
      "uri": "http://kaci.biz",
    },
    Object {
      "category": "artists",
      "id": 39054,
      "name": "et",
      "tagged": 89460,
      "uri": "https://arvel.net",
    },
    Object {
      "category": "artists",
      "id": 878116,
      "name": "ipsam",
      "tagged": 68521,
      "uri": "https://connor.info",
    },
    Object {
      "category": "artists",
      "id": 186260,
      "name": "repellat",
      "tagged": 14675,
      "uri": "http://audrey.info",
    },
  ],
  "pagination": Object {
    "page": 1,
    "total": 21,
  },
}
`;

exports[`TagsController (e2e) /tags/list/:category (GET) converts parameters types 4`] = `
Object {
  "data": Array [
    Object {
      "category": "artists",
      "id": 128124,
      "name": "esse",
      "tagged": 99718,
      "uri": "https://torey.com",
    },
    Object {
      "category": "artists",
      "id": 39054,
      "name": "et",
      "tagged": 89460,
      "uri": "https://arvel.net",
    },
    Object {
      "category": "artists",
      "id": 878116,
      "name": "ipsam",
      "tagged": 68521,
      "uri": "https://connor.info",
    },
    Object {
      "category": "artists",
      "id": 186260,
      "name": "repellat",
      "tagged": 14675,
      "uri": "http://audrey.info",
    },
    Object {
      "category": "artists",
      "id": 691876,
      "name": "tempore",
      "tagged": 95788,
      "uri": "http://kaci.biz",
    },
  ],
  "pagination": Object {
    "page": 1,
    "total": 21,
  },
}
`;

exports[`TagsController (e2e) /tags/list/:category (GET) converts parameters types 5`] = `
Object {
  "data": Array [
    Object {
      "category": "artists",
      "id": 128124,
      "name": "esse",
      "tagged": 99718,
      "uri": "https://torey.com",
    },
    Object {
      "category": "artists",
      "id": 39054,
      "name": "et",
      "tagged": 89460,
      "uri": "https://arvel.net",
    },
    Object {
      "category": "artists",
      "id": 878116,
      "name": "ipsam",
      "tagged": 68521,
      "uri": "https://connor.info",
    },
    Object {
      "category": "artists",
      "id": 186260,
      "name": "repellat",
      "tagged": 14675,
      "uri": "http://audrey.info",
    },
    Object {
      "category": "artists",
      "id": 691876,
      "name": "tempore",
      "tagged": 95788,
      "uri": "http://kaci.biz",
    },
  ],
  "pagination": Object {
    "page": 1,
    "total": 21,
  },
}
`;

exports[`TagsController (e2e) /tags/list/:category (GET) sort by name 1`] = `
Object {
  "data": Array [
    Object {
      "category": "artists",
      "id": 128124,
      "name": "esse",
      "tagged": 99718,
      "uri": "https://torey.com",
    },
    Object {
      "category": "artists",
      "id": 39054,
      "name": "et",
      "tagged": 89460,
      "uri": "https://arvel.net",
    },
    Object {
      "category": "artists",
      "id": 878116,
      "name": "ipsam",
      "tagged": 68521,
      "uri": "https://connor.info",
    },
    Object {
      "category": "artists",
      "id": 186260,
      "name": "repellat",
      "tagged": 14675,
      "uri": "http://audrey.info",
    },
    Object {
      "category": "artists",
      "id": 691876,
      "name": "tempore",
      "tagged": 95788,
      "uri": "http://kaci.biz",
    },
  ],
  "pagination": Object {
    "page": 1,
    "total": 21,
  },
}
`;

exports[`TagsController (e2e) /tags/list/:category (GET) sort by popularity 1`] = `
Object {
  "data": Array [
    Object {
      "category": "artists",
      "id": 128124,
      "name": "esse",
      "tagged": 99718,
      "uri": "https://torey.com",
    },
    Object {
      "category": "artists",
      "id": 691876,
      "name": "tempore",
      "tagged": 95788,
      "uri": "http://kaci.biz",
    },
    Object {
      "category": "artists",
      "id": 39054,
      "name": "et",
      "tagged": 89460,
      "uri": "https://arvel.net",
    },
    Object {
      "category": "artists",
      "id": 878116,
      "name": "ipsam",
      "tagged": 68521,
      "uri": "https://connor.info",
    },
    Object {
      "category": "artists",
      "id": 186260,
      "name": "repellat",
      "tagged": 14675,
      "uri": "http://audrey.info",
    },
  ],
  "pagination": Object {
    "page": 1,
    "total": 21,
  },
}
`;

exports[`TagsController (e2e) /tags/list/:category/:letter (GET) is case insensitive 1`] = `
Array [
  Object {
    "category": "artists",
    "id": 22330,
    "name": "ab",
    "tagged": 51935,
    "uri": "https://ozella.net",
  },
  Object {
    "category": "artists",
    "id": 918732,
    "name": "accusantium",
    "tagged": 54954,
    "uri": "http://tierra.net",
  },
  Object {
    "category": "artists",
    "id": 748164,
    "name": "aperiam",
    "tagged": 75014,
    "uri": "https://yasmin.name",
  },
  Object {
    "category": "artists",
    "id": 550947,
    "name": "aut",
    "tagged": 57974,
    "uri": "http://genoveva.name",
  },
  Object {
    "category": "artists",
    "id": 517593,
    "name": "aut",
    "tagged": 93487,
    "uri": "https://oswaldo.name",
  },
]
`;

exports[`TagsController (e2e) /tags/list/:category/:letter (GET) is case insensitive 2`] = `
Array [
  Object {
    "category": "artists",
    "id": 22330,
    "name": "ab",
    "tagged": 51935,
    "uri": "https://ozella.net",
  },
  Object {
    "category": "artists",
    "id": 918732,
    "name": "accusantium",
    "tagged": 54954,
    "uri": "http://tierra.net",
  },
  Object {
    "category": "artists",
    "id": 748164,
    "name": "aperiam",
    "tagged": 75014,
    "uri": "https://yasmin.name",
  },
  Object {
    "category": "artists",
    "id": 550947,
    "name": "aut",
    "tagged": 57974,
    "uri": "http://genoveva.name",
  },
  Object {
    "category": "artists",
    "id": 517593,
    "name": "aut",
    "tagged": 93487,
    "uri": "https://oswaldo.name",
  },
]
`;

exports[`TagsController (e2e) /tags/list/:category/:letter (GET) returns all tags starting with specified letter, sorted by name 1`] = `
Array [
  Object {
    "category": "artists",
    "id": 22330,
    "name": "ab",
    "tagged": 51935,
    "uri": "https://ozella.net",
  },
  Object {
    "category": "artists",
    "id": 918732,
    "name": "accusantium",
    "tagged": 54954,
    "uri": "http://tierra.net",
  },
  Object {
    "category": "artists",
    "id": 748164,
    "name": "aperiam",
    "tagged": 75014,
    "uri": "https://yasmin.name",
  },
  Object {
    "category": "artists",
    "id": 550947,
    "name": "aut",
    "tagged": 57974,
    "uri": "http://genoveva.name",
  },
  Object {
    "category": "artists",
    "id": 517593,
    "name": "aut",
    "tagged": 93487,
    "uri": "https://oswaldo.name",
  },
]
`;

exports[`TagsController (e2e) /tags/search (GET) returns tags including search query 1`] = `
Array [
  Object {
    "category": "artists",
    "id": 878116,
    "name": "ipsam",
    "tagged": 68521,
    "uri": "https://connor.info",
  },
  Object {
    "category": "tags",
    "id": 412538,
    "name": "ipsam",
    "tagged": 14212,
    "uri": "https://otis.org",
  },
  Object {
    "category": "characters",
    "id": 593064,
    "name": "ipsum",
    "tagged": 5924,
    "uri": "https://marco.com",
  },
]
`;

exports[`TagsController (e2e) /tags/search (GET) returns tags including search query and category 1`] = `
Array [
  Object {
    "category": "tags",
    "id": 412538,
    "name": "ipsam",
    "tagged": 14212,
    "uri": "https://otis.org",
  },
]
`;
